#!/bin/sh

# i3blocks newsboat module.
# Displays number of unread news items and an loading icon if updating.
# When clicked, brings up `newsboat`.

case $BLOCK_BUTTON in
        1) setsid "$TERMINAL" -e newsboat >/dev/null  ;;
	2) setsid newsup >/dev/null & exit ;;
esac

 cat /tmp/newsupdate 2>/dev/null || echo "$(newsboat -x print-unread | awk '{ print "📰 " $1}' | sed s/^0$//g)$(cat ~/.config/newsboat/.update 2>/dev/null)"