@@ -2,7 +2,7 @@
 
 jack_control start
 jack_control ds alsa
-jack_control dps device hw:HD2
+jack_control dps device hw:NVidia
 jack_control dps rate 48000
 jack_control dps nperiods 2
 jack_control dps period 64
