@@ -1,2 +1,5 @@
 #!/bin/bash
+
+# [RUN] [D]etached
+
 "$@" </dev/null &>/dev/null &
