@@ -2,6 +2,7 @@
 
 while [ true ]
 do
-    pkill -RTMIN+1 "i3blocks"
     sleep 1
+    pkill -RTMIN+1 "i3blocks"
+    
 done
