@@ -1,11 +1,36 @@
 #!/bin/sh
 
+LOG_DIR="`xdg-user-dir LOGS`/popupgrade"
+
+echo "Updating mirrors."
+echo ""
+
+sudo reflector --verbose --latest 10 --sort rate --save /etc/pacman.d/mirrorlist
+
 echo "Beginning upgrade."
 echo ""
 
+mv $LOG_DIR/pkg_ver.1.log $LOG_DIR/pkg_ver.2.log > /dev/null
+mv $LOG_DIR/epkg_ver.1.log $LOG_DIR/epkg_ver.2.log > /dev/null
+
+mv $LOG_DIR/pkg_ver.0.log $LOG_DIR/pkg_ver.1.log > /dev/null
+mv $LOG_DIR/epkg_ver.0.log $LOG_DIR/epkg_ver.1.log > /dev/null
+
+date > $LOG_DIR/pkg_ver.0.log
+yay -Q >> $LOG_DIR/pkg_ver.0.log
+date > $LOG_DIR/epkg_ver.0.log
+yay -Qe >> $LOG_DIR/epkg_ver.0.log
+
 yay -Syu
 
-pkill -RTMIN+13 "i3blocks"
+case $WM in
+    i3blocks) 
+        pkill -RTMIN+13 "i3blocks"
+        ;;
+    bspwm) 
+        polybar-msg hook pacpackages 1 &>/dev/null
+        ;;
+esac
 
 echo ""
 read -p "Press [Enter] quit..."
