@@ -8,14 +8,14 @@ curl -sf "https://corona-stats.online/" > ${cache_file}
 
 display() {
     uruguay=`grep -F Uruguay ${cache_file}  | sed  's/\x1b\[[0-9;]*m//g' | sed "s/\s*//g ; s/│/;/g ; s/║//g" \
-    | awk -F';' '{print "🇺🇾 😷 "$8 " (" ($4!="" ? $4 : 0)  ")"  " 🏥 " ($9!="" ? $9 : 0) " 💀" ($5!="" ? $5 : 0)  }'`
+    | awk -F';' '{print "😀 " $7 " 😷 "$8 " (" ($4!="" ? $4 : 0)  ") 🏥 " ($9!="" ? $9 : 0) " 💀" ($5!="" ? $5 : 0)  }'`
 }
 
 display_full() {
     uruguay= display
     
     mundo=`grep -F World ${cache_file}  | tail -1 | sed  's/\x1b\[[0-9;]*m//g' | sed "s/\s*//g ; s/│/;/g ; s/║//g" \
-    | awk -F';' '{print "🌎  💀" ($5!="" ? $5 : 0) "  😷"$8 " (" ($4!="" ? $4 : 0) ")" }'`
+    | awk -F';' '{print "💀" ($5!="" ? $5 : 0) "  😷"$8 " (" ($4!="" ? $4 : 0) ")" }'`
     
     echo -e "$uruguay" 
 }
