@@ -1,0 +1,37 @@
+#!/bin/bash
+# Originally by https://github.com/windelicato/
+# edited beyound recognition
+
+size=${2:-'20'}
+dir=$1
+
+# Find current window mode
+is_floating() {
+bspc query -T -n | grep -q '"state":"floating"'
+}
+# If the window is floating, move it
+if is_floating; then
+#only parse input if window is floating,tiled windows accept input as is
+        case "$dir" in
+  		west) switch="-x"
+  		sign="-"
+        	;;
+  		east) switch="-x"
+         	sign="+"
+       		;;
+  		north) switch="-y"
+         	sign="-"
+        	;;
+  		*) switch="-y"
+     		sign="+"
+     		;;
+ 		esac
+ xdo move ${switch} ${sign}${size}
+
+# Otherwise, window is tiled: switch with window in given direction
+else
+	id=$(bspc query -N -n)
+	bspc node -n ${dir}.!automatic || bspc node -s ${dir} ||  bspc node -m ${dir} && bspc monitor -f
+ 	bspc node -f ${id}
+
+fi
